--- a/.gitignore
+++ b/.gitignore
@@ -193,6 +193,12 @@ cython_debug/
 #  refer to https://docs.cursor.com/context/ignore-files
 .cursorignore
 .cursorindexingignore
-
-# DuckDB
+# Ignore DuckDB-files
 *.duckdb
+*.db
+*.wal
+
+# ignore dlt
+*.dlt
+
+*test.py
