Minor naming/comment changes

--- a/.gitignore
+++ b/.gitignore
@@ -193,12 +193,14 @@ cython_debug/
 #  refer to https://docs.cursor.com/context/ignore-files
 .cursorignore
 .cursorindexingignore
-# Ignore DuckDB-files
+
+# DuckDB
 *.duckdb
 *.db
 *.wal
 
-# ignore dlt
+# DLT
 *.dlt
 
+# Other
 *test.py
