Updated sources+ formatting inside previous models

--- a/wow_api_dbt/models/sources.yml
+++ b/wow_api_dbt/models/sources.yml
@@ -5,3 +5,5 @@ sources:
     tables:
       - name: auctions
       - name: items  # lägg till fler tabeller här om du vill
+      - name: realm_data
+      - name: realm_data__realms
