--- a/wow_api_dbt/dbt_project.yml
+++ b/wow_api_dbt/dbt_project.yml
@@ -33,11 +33,6 @@ models:
   wow_api_dbt:
     +materialized: view
     # Config indicated by + and applies to all files under models/example/
-    src:
-      +schema: refined
-      
-    dim:
-      +schema: refined
-    marts:
+    refined:
       +schema: refined
     
