FEAT: Added a schedule for certain dlt scripts to run everyhour through a dagster schedule

--- a/wow_dagster/pyproject.toml
+++ b/wow_dagster/pyproject.toml
@@ -1,7 +1,7 @@
 [project]
 name = "wow_dagster"
 version = "0.1.0"
-description = "Add your description here"
+description = "APAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAA"
 readme = "README.md"
 requires-python = ">=3.9,<3.13"
 dependencies = [
