--- a/requirements.txt
+++ b/requirements.txt
@@ -5,4 +5,6 @@ dbt-duckdb==1.7.2
 streamlit==1.35.0
 streamlit-aggrid==0.3.4.post3
 dagster==1.7.0
+dagster-dlt==0.27.0
+dagster-dbt==0.27.0
 pandas==2.2.2
