--- a/wow_api_dbt/models/sources.yml
+++ b/wow_api_dbt/models/sources.yml
@@ -1,30 +1,34 @@
 version: 2
 
 sources:
-  - name: raw
+  - name: raw_auctions
     tables:
       - name: auctions
         meta:
           dagster:
             asset_key: ["dlt_wow_api_data_fetch_auction_house_items"]
-      - name: items
+      - name: commodities
         meta:
           dagster:
-            asset_key: ["dlt_wow_api_data_fetch_items"]
+            asset_key: ["dlt_wow_api_data_fetch_ah_commodities"]
+  - name: raw_misc
+    tables:
       - name: realm_data
         meta:
           dagster:
             asset_key: ["dlt_wow_api_data_fetch_realm_data"]
       - name: realm_data__realms
 
-      - name: commodities
-        meta:
-          dagster:
-            asset_key: ["dlt_wow_api_data_fetch_ah_commodities"]
 
+  - name: raw_items
+    tables:
       - name: item_media
 
       - name: item_details
+      - name: items
+        meta:
+          dagster:
+            asset_key: ["dlt_wow_api_data_fetch_items"]
       
       - name: item_details__preview_item__stats
 
